<resources>
    <string name="app_name">WatchCollector</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="header">Accelerometer:</string>
    <string name="accelData_x">x: 0.0</string>
    <string name="accelData_y">y: 0.0</string>
    <string name="accelData_z">z: 0.0</string>
    <string name="left_button">left</string>
    <string name="right_button">right</string>
</resources>